creado jars para comunicacion en kafka

--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
 
       # Kafka anuncia la IP real de tu máquina
-      #KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://${HOST_IP}:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.27.225.3:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://${HOST_IP}:9092
+      #KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.27.225.3:9092
       # Necesario en entornos de prueba (1 broker)
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
