--- a/ev-cp-monitor/pom.xml
+++ b/ev-cp-monitor/pom.xml
@@ -8,4 +8,13 @@
   <groupId>es.ua.sd.practica</groupId>
   <artifactId>ev-cp-monitor</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+      <dependency>
+          <groupId>es.ua.sd.practica</groupId>
+          <artifactId>evcharging-common</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+      
+  </dependencies>
 </project>
