--- a/ev-registry/pom.xml
+++ b/ev-registry/pom.xml
@@ -9,7 +9,18 @@
   <artifactId>ev-r</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>ev-registry</name>
-  
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.13.0</version> <configuration>
+                  <source>17</source> 
+                  <target>17</target> 
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
   <dependencies>
       <dependency>
           <groupId>es.ua.sd.practica</groupId>
